# gemini-media-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  llms-install.md  setup.py
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
plugins/nanobanana-prompting/.claude-plugin/: plugin.json
plugins/veo-prompting/.claude-plugin/: plugin.json
scripts/: cold-install-smoke.sh
servers/nanobanana/: README.md  pyproject.toml  requirements.txt
servers/nanobanana/.mcp/: server.json
servers/nanobanana/nanobanana_mcp_server/: __init__.py  __main__.py  server.py
servers/nanobanana/nanobanana_mcp_server/config/: settings.py
servers/nanobanana/nanobanana_mcp_server/services/: __init__.py  enhanced_image_service.py  file_image_service.py  image_database_service.py  image_storage_service.py  maintenance_service.py
servers/nanobanana/tests/: test_cli_smoke.py
servers/veo/: CHANGELOG.md  README.md  pyproject.toml
servers/veo/.mcp/: server.json
servers/veo/src/veo_mcp_server/: __init__.py  __main__.py  server.py
servers/veo/src/veo_mcp_server/core/: __init__.py  validation.py
servers/veo/tests/: test_cli_smoke.py  test_validation.py
