[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobanana-mcp-server"
version = "1.1.0"
description = "MCP server for AI image generation using NanoBanana Pro 2 -- 4K resolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "u2n4" },
]
keywords = [
    "mcp", "model-context-protocol", "claude", "gemini", "imagen",
    "image-generation", "ai-art", "4k", "text-to-image", "nanobanana",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/u2n4/gemini-media-mcp"
Repository = "https://github.com/u2n4/gemini-media-mcp"

[project.scripts]
nanobanana-mcp-server = "nanobanana_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["nanobanana_mcp_server"]
