[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobanana-imagen-mcp"
version = "1.1.2"
description = "MCP server for AI image generation using NanoBanana Pro 2 -- 4K resolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "u2n4" },
]
keywords = [
    "mcp", "model-context-protocol", "claude", "gemini", "imagen",
    "image-generation", "ai-art", "4k", "text-to-image", "nanobanana",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/u2n4/gemini-media-mcp"
Repository = "https://github.com/u2n4/gemini-media-mcp"

[project.scripts]
nanobanana-imagen-mcp = "nanobanana_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["nanobanana_mcp_server"]
